# twiml-size-validator

./: .gitignore  README.md  pyproject.toml
src/: custom.txt  generator.py  main.py
