[project]
name = "conversation-relay-tester"
version = "1.0.0"
description = "TwiML payload size testing framework"
authors = [{ name = "https://github.com/pBread" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
